fixed alignment of header

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ a,
 button {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1.3rem;
   color: #edf0f1;
   text-decoration: none;
 }
@@ -63,12 +63,16 @@ button:hover {
   background-color: rgba(251, 195, 144, 0.8);
 }
 
+.projectBtn{
+    margin-top: 2rem;
+}
+
 .headerContainer {
-  margin-top: 150px;
+  margin-top: 250px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-left: 130px;
+  align-items:flex-start;
+  padding-left: 10%;
 }
 
 .gradientHeader {
